--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     <!-- Love Message -->
     <div class="bounce-in max-w-md text-center px-4">
       <div class="bg-white/60 backdrop-blur-sm rounded-3xl p-6 shadow-xl">
-        <p class="text-xl" style="color: #6a1b9a;">Wishing you a day filled with love, laughter, and all the happiness your heart can hold. Here's to an amazing year ahead! 🎂✨</p>
+        <p class="text-xl" style="color: #6a1b9a;">Words cannot express how grateful I am to having you in my life. I am wishing you nothing but the best and to remind you that 28 is the best year since you willl be Twenty ATE.Wishing you a day filled with love, laughter, and all the happiness your heart can hold. 🎂✨</p>
       </div>
     </div>
 
